--- a/project/poly_rotations/index.html
+++ b/project/poly_rotations/index.html
@@ -22,7 +22,7 @@
 </style>
 
 
-<link rel="stylesheet" href="http://example.com/css/main.css">
+<link rel="stylesheet" href="https://rurz.github.io/css/main.css">
 
 
 
@@ -132,13 +132,13 @@
         <h2>Polychromatic rotations in pixellated screens</h2>
         <h5></h5>
         
-<a href="http://example.com/tags/polychromatic"><kbd class="item-tag">polychromatic</kbd></a>
+<a href="https://rurz.github.io/tags/polychromatic"><kbd class="item-tag">polychromatic</kbd></a>
 
-<a href="http://example.com/tags/pixellated"><kbd class="item-tag">pixellated</kbd></a>
+<a href="https://rurz.github.io/tags/pixellated"><kbd class="item-tag">pixellated</kbd></a>
 
-<a href="http://example.com/tags/discrete"><kbd class="item-tag">discrete</kbd></a>
+<a href="https://rurz.github.io/tags/discrete"><kbd class="item-tag">discrete</kbd></a>
 
-<a href="http://example.com/tags/quaternions"><kbd class="item-tag">quaternions</kbd></a>
+<a href="https://rurz.github.io/tags/quaternions"><kbd class="item-tag">quaternions</kbd></a>
 
 
     </div>
