--- a/about/index.html
+++ b/about/index.html
@@ -10,18 +10,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Alejandro R. Urzúa" />
-  <link rel="shortcut icon" type="image/x-icon" href="https:rurz.github.io/img/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="arurz.xyz/img/favicon.ico">
 
   
   
   
   
   
-  <link rel="stylesheet" href="https:rurz.github.io/style.min.b3460c8bba5e241ce394df5bdae999479440d759e6ea6f023d5b2a1f1053b618.css" integrity="sha256-s0YMi7peJBzjlN9b2umZR5RA11nm6m8CPVsqHxBTthg=">
+  <link rel="stylesheet" href="arurz.xyz/arurz.xyz/style.min.b3460c8bba5e241ce394df5bdae999479440d759e6ea6f023d5b2a1f1053b618.css" integrity="sha256-s0YMi7peJBzjlN9b2umZR5RA11nm6m8CPVsqHxBTthg=">
   
   
   
-  <link rel="stylesheet" href="https:rurz.github.io/style-dark.min.c71d5a75ea8bc10c7737a3b928c761414420e0e5a6918e276987980190de2ca1.css" media="(prefers-color-scheme: dark)" integrity="sha256-xx1adeqLwQx3N6O5KMdhQUQg4OWmkY4naYeYAZDeLKE=">
+  <link rel="stylesheet" href="arurz.xyz/arurz.xyz/style-dark.min.c71d5a75ea8bc10c7737a3b928c761414420e0e5a6918e276987980190de2ca1.css" media="(prefers-color-scheme: dark)" integrity="sha256-xx1adeqLwQx3N6O5KMdhQUQg4OWmkY4naYeYAZDeLKE=">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
   
@@ -32,7 +32,7 @@
 I&rsquo;m a early researcher on Theoretical Physics signed at the Optics Coordination of the National Institute of Astrophysics, Optics and Electronics (INAOE in Spanish for short). For my educational background I have the following achievements
  Bachelor in Physics at the Universidad Autónoma del Estado de Morelos Master in Physical Sciences at the Universidad Nacional Nacional Autónoma de México PhD in Optics at the Instituto Nacional de Astrofísica, Óptica y Electrónica  " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https:rurz.github.io/about/" /><meta property="article:section" content="" />
+<meta property="og:url" content="arurz.xyz/about/" /><meta property="article:section" content="" />
 
 
 
@@ -43,7 +43,7 @@ I&rsquo;m a early researcher on Theoretical Physics signed at the Optics Coordin
 
 <meta itemprop="wordCount" content="95">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
-<meta name="twitter:image" content="https:rurz.github.io/img/avatar.jpg"/>
+<meta name="twitter:image" content="arurz.xyz/img/avatar.jpg"/>
 <meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="About me Hey you, all! So you want to know a little about me, well this is a short story because my work represents me.
 I&rsquo;m a early researcher on Theoretical Physics signed at the Optics Coordination of the National Institute of Astrophysics, Optics and Electronics (INAOE in Spanish for short). For my educational background I have the following achievements
@@ -68,11 +68,11 @@ I&rsquo;m a early researcher on Theoretical Physics signed at the Optics Coordin
   <header>
   
   <div class="avatar">
-    <img class="avatarMask" src="https:rurz.github.io/img/avatar.jpg" alt="">
-    <a href="https:rurz.github.io"><img class="avatar-border" src="https:rurz.github.io/img/avatar-border.svg" alt=""></a>
+    <img class="avatarMask" src="arurz.xyz/img/avatar.jpg" alt="">
+    <a href="arurz.xyz"><img class="avatar-border" src="arurz.xyz/img/avatar-border.svg" alt=""></a>
   </div>
   
-  <h2><a class="author" href="https:rurz.github.io">Alejandro R. Urzúa</a></h2>
+  <h2><a class="author" href="arurz.xyz">Alejandro R. Urzúa</a></h2>
 </header>
 
   
