--- a/404.html
+++ b/404.html
@@ -10,18 +10,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Alejandro R. Urzúa" />
-  <link rel="shortcut icon" type="image/x-icon" href="arurz.xyz/img/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="https://rurz.github.io/img/favicon.ico">
 
   
   
   
   
   
-  <link rel="stylesheet" href="arurz.xyz/arurz.xyz/style.min.b3460c8bba5e241ce394df5bdae999479440d759e6ea6f023d5b2a1f1053b618.css" integrity="sha256-s0YMi7peJBzjlN9b2umZR5RA11nm6m8CPVsqHxBTthg=">
+  <link rel="stylesheet" href="https://rurz.github.io/style.min.b3460c8bba5e241ce394df5bdae999479440d759e6ea6f023d5b2a1f1053b618.css" integrity="sha256-s0YMi7peJBzjlN9b2umZR5RA11nm6m8CPVsqHxBTthg=">
   
   
   
-  <link rel="stylesheet" href="arurz.xyz/arurz.xyz/style-dark.min.c71d5a75ea8bc10c7737a3b928c761414420e0e5a6918e276987980190de2ca1.css" media="(prefers-color-scheme: dark)" integrity="sha256-xx1adeqLwQx3N6O5KMdhQUQg4OWmkY4naYeYAZDeLKE=">
+  <link rel="stylesheet" href="https://rurz.github.io/style-dark.min.c71d5a75ea8bc10c7737a3b928c761414420e0e5a6918e276987980190de2ca1.css" media="(prefers-color-scheme: dark)" integrity="sha256-xx1adeqLwQx3N6O5KMdhQUQg4OWmkY4naYeYAZDeLKE=">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
   
@@ -31,12 +31,12 @@
 <meta property="og:description" content="        Theoretical Physicist
     " />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="arurz.xyz/404.html" />
+<meta property="og:url" content="https://rurz.github.io/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="        Theoretical Physicist
     "><meta name="twitter:card" content="summary"/>
-<meta name="twitter:image" content="arurz.xyz/img/avatar.jpg"/>
+<meta name="twitter:image" content="https://rurz.github.io//img/avatar.jpg"/>
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="        Theoretical Physicist
     "/>
@@ -58,17 +58,17 @@
     <header>
   
   <div class="avatar">
-    <img class="avatarMask" src="arurz.xyz/img/avatar.jpg" alt="">
-    <a href="arurz.xyz"><img class="avatar-border" src="arurz.xyz/img/avatar-border.svg" alt=""></a>
+    <img class="avatarMask" src="https://rurz.github.io//img/avatar.jpg" alt="">
+    <a href="https://rurz.github.io/"><img class="avatar-border" src="https://rurz.github.io//img/avatar-border.svg" alt=""></a>
   </div>
   
-  <h2><a class="author" href="arurz.xyz">Alejandro R. Urzúa</a></h2>
+  <h2><a class="author" href="https://rurz.github.io/">Alejandro R. Urzúa</a></h2>
 </header>
 
     <div class="main">
       <div>
         <h1>404 page not found.</h1>
-        <p><a href="arurz.xyz">Go Home</a></p>
+        <p><a href="https://rurz.github.io/">Go Home</a></p>
       </div>
     </div>
     <footer>
