--- a/about/index.html
+++ b/about/index.html
@@ -136,8 +136,8 @@
     </div>
 
     <div align="start" class="content"><h1 id="about-me">About me</h1>
-<h4 id="hey-you-all-so-you-want-to-know-a-little-about-me-well-this-is-a-short-story-because-my-work-represents-me">Hey you, all! So you want to know a little about me, well this is a short story because my work represents me.</h4>
-<h4 id="im-an-early-researcher-on-theoretical-physics-signed-at-the-optics-coordination-of-the-national-institute-of-astrophysics-optics-and-electronics-inaoewwwinaoepmx-in-spanish-for-short-for-my-educational-background-i-have-the-following-achievements">I&rsquo;m an early researcher on Theoretical Physics signed at the Optics Coordination of the National Institute of Astrophysics, Optics and Electronics (<a href="www.inaoep.mx">INAOE</a> in Spanish for short). For my educational background I have the following achievements</h4>
+<p>Hey you, all! So you want to know a little about me, well this is a short story because my work represents me.</p>
+<p>I&rsquo;m an early researcher on Theoretical Physics signed at the Optics Coordination of the National Institute of Astrophysics, Optics and Electronics (<a href="www.inaoep.mx">INAOE</a> in Spanish for short). For my educational background I have the following achievements</p>
 <ul>
 <li>Bachelor in Physics at the Universidad Autónoma del Estado de Morelos</li>
 <li>Master in Physical Sciences at the Universidad Nacional Nacional Autónoma de México</li>
