--- a/project/poly_rotations/index.html
+++ b/project/poly_rotations/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Polychromatic rotations in pixellated screens</title>
         
-            <link rel="icon" href="https://rurz.github.io/static/favicon.ico">
+            <link rel="icon" href="https://rurz.github.io/favicon.ico">
         
         <style>
 
