--- a/project/su31_phase/index.html
+++ b/project/su31_phase/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Phase transitions in coupled systems on \(su(3,1)\) group approximation</title>
         
-            <link rel="icon" href="https://rurz.github.io/static/favicon.ico">
+            <link rel="icon" href="https://rurz.github.io/favicon.ico">
         
         <style>
 
