--- a/f2invariant/index.html
+++ b/f2invariant/index.html
@@ -158,12 +158,12 @@
 <p>$$ f_{2}(t) = \Gamma\left(\frac{3}{4}\right)^{2}\textrm{J}_{-1/4}\left(\frac{t^{2}}{2}\right)\frac{t}{2},$$</p>
 <p>that shows a damping oscillatory behavior, as shown in the figure. It is worth to notice, that in this case of the Hamiltonian, the third-order differential equation for $f_{2}(t)$ is independent of the explicit solution of the movement equation $q_{i}(t)$.</p>
 <figure>
-    <img src="/posts/science/images/ft.png"/> 
+    <img src="/posts/science/images/ft.jpg"/> 
 </figure>
 
 <p>Now, if we also solve the movement equation for $q_{i}(t)$, we arrive to a damping oscillatory behavior as well, showing that the mean position of the individual oscillator are in a one and a halfway of the respective configuration space, and as a function of time, their amplitude of oscillation is decreasing after each period. The figure show the damping phenomena.</p>
 <figure>
-    <img src="/posts/science/images/qi.png"/> 
+    <img src="/posts/science/images/qi.jpg"/> 
 </figure>
 
 <h2 id="4-conclusions">4. Conclusions</h2>
