Fix minor typos

--- a/gibbs-phenomena-in-signals/index.html
+++ b/gibbs-phenomena-in-signals/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>Gibbs-like oscillations in one-dimensional discrete signals - Alejandro R. Urzúa</title><meta name="Description" content="Personal webpage"><meta property="og:title" content="Gibbs-like oscillations in one-dimensional discrete signals" />
-<meta property="og:description" content="1 Introduction: Continous signals It is well known that a well suitable periodic one-dimensional signal (or function) $f(x)$ in $\mathcal{L}^{2}$ can be expanded and encoded in the coefficients of the Fourier series $f_{n}$ [1, pp.]
+<meta property="og:description" content="1 Introduction: Continuous signals It is well known that a well suitable periodic one-dimensional signal (or function) $f(x)$ in $\mathcal{L}^{2}$ can be expanded and encoded in the coefficients of the Fourier series $f_{n}$ [1, pp.]
 $$f_{n} = \left(2\pi\right)^{-1/2}\int_{-\pi}^{\pi}dx f(x)\exp\left(-\mathrm{i}nx\right),\qquad (1)$$
 that are used to reconstruct the original waveform $f(x)$ up to a $N$ degree,
 $$f(x) \equiv \left(2\pi\right)^{-1/2}\sum\limits_{n = 0}^{N - 1}f_{n}\exp\left(\mathrm{i}nx\right).\qquad (2)$$
@@ -20,7 +20,7 @@ The Gibbs phenomena is assigned to the behavior of the reconstructed signal unde
 <meta name="twitter:image" content="/logo.png"/>
 
 <meta name="twitter:title" content="Gibbs-like oscillations in one-dimensional discrete signals"/>
-<meta name="twitter:description" content="1 Introduction: Continous signals It is well known that a well suitable periodic one-dimensional signal (or function) $f(x)$ in $\mathcal{L}^{2}$ can be expanded and encoded in the coefficients of the Fourier series $f_{n}$ [1, pp.]
+<meta name="twitter:description" content="1 Introduction: Continuous signals It is well known that a well suitable periodic one-dimensional signal (or function) $f(x)$ in $\mathcal{L}^{2}$ can be expanded and encoded in the coefficients of the Fourier series $f_{n}$ [1, pp.]
 $$f_{n} = \left(2\pi\right)^{-1/2}\int_{-\pi}^{\pi}dx f(x)\exp\left(-\mathrm{i}nx\right),\qquad (1)$$
 that are used to reconstruct the original waveform $f(x)$ up to a $N$ degree,
 $$f(x) \equiv \left(2\pi\right)^{-1/2}\sum\limits_{n = 0}^{N - 1}f_{n}\exp\left(\mathrm{i}nx\right).\qquad (2)$$
@@ -135,7 +135,7 @@ The Gibbs phenomena is assigned to the behavior of the reconstructed signal unde
                 </div>
                 <div class="details-content toc-content" id="toc-content-static"><nav id="TableOfContents">
   <ul>
-    <li><a href="#1-introduction-continous-signals">1 Introduction: Continous signals</a></li>
+    <li><a href="#1-introduction-continuous-signals">1 Introduction: Continuous signals</a></li>
     <li><a href="#2-discrete-signals">2. Discrete signals</a>
       <ul>
         <li><a href="#even-interval">Even interval</a></li>
@@ -145,7 +145,7 @@ The Gibbs phenomena is assigned to the behavior of the reconstructed signal unde
     <li><a href="#3-conclusions">3. Conclusions</a></li>
   </ul>
 </nav></div>
-            </div><div class="content" id="content"><h2 id="1-introduction-continous-signals">1 Introduction: Continous signals</h2>
+            </div><div class="content" id="content"><h2 id="1-introduction-continuous-signals">1 Introduction: Continuous signals</h2>
 <p>It is well known that a well suitable periodic one-dimensional signal (or function) $f(x)$ in $\mathcal{L}^{2}$ can be expanded and encoded in the coefficients of the Fourier series $f_{n}$ [1, pp.]</p>
 <p>$$f_{n} = \left(2\pi\right)^{-1/2}\int_{-\pi}^{\pi}dx f(x)\exp\left(-\mathrm{i}nx\right),\qquad (1)$$</p>
 <p>that are used to reconstruct the original waveform $f(x)$ up to a $N$ degree,</p>
