--- a/404.html
+++ b/404.html
@@ -8,16 +8,16 @@
         <title>404 Page not found - Alejandro R. Urzúa</title><meta name="Description" content="Personal webpage"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Personal webpage" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/404.html" />
-<meta property="og:image" content="/logo.png"/>
+<meta property="og:url" content="https://arurz.xyz/404.html" />
+<meta property="og:image" content="https://arurz.xyz/logo.png"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/logo.png"/>
+<meta name="twitter:image" content="https://arurz.xyz/logo.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Personal webpage"/>
 <meta name="application-name" content="Alejandro R. Urzúa">
-<meta name="apple-mobile-web-app-title" content="Alejandro R. Urzúa"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="canonical" href="/404.html" /><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css"></head>
+<meta name="apple-mobile-web-app-title" content="Alejandro R. Urzúa"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="canonical" href="https://arurz.xyz/404.html" /><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css"></head>
     <body header-desktop="fixed" header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
