--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 <meta name="twitter:title" content="About me"/>
 <meta name="twitter:description" content="# Academic Formation  [2011] Science Bachelor Degree at the Universidad Autónoma del Estado de Morelos (UAEM)  Thesis: Phase space signal-analysis (En español)   [2014] Physical Sciences Master Degree at the Universidad Nacional Autóma de México (UNAM)  Thesis: Rotations and gyrations in rectangular Cartesian screens (En español)   [2016] Physics Doctorate Degree at the Instituto Nacional de Astrofísica, Óptica y Electrónica (INAOE)  Thesis: Analysis of time-dependent classical and quantum mechanical systems (En español)    # Current Roles   [2021 - ] Postdoctoral Fellow at Departamento de Física Teórica, UNAM"/>
 <meta name="application-name" content="Alejandro R. Urzúa">
-<meta name="apple-mobile-web-app-title" content="Alejandro R. Urzúa"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="canonical" href="https://arurz.xyz/about/" /><link rel="prev" href="https://arurz.xyz/articles/" /><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css"><script type="application/ld+json">
+<meta name="apple-mobile-web-app-title" content="Alejandro R. Urzúa"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="canonical" href="https://arurz.xyz/about/" /><link rel="prev" href="https://arurz.xyz/research/" /><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -51,7 +51,7 @@
         title="/favicon.ico" /><span id="id-1" class="typeit"></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/posts/" title="Posts">&nbsp;&nbsp; Posts &nbsp;&nbsp;</a><a class="menu-item" href="/research/" title="Research">&nbsp;&nbsp; Research &nbsp;&nbsp;</a><a class="menu-item" href="/articles/" title="Articles">&nbsp;&nbsp; Articles &nbsp;&nbsp;&nbsp;</a><a class="menu-item active" href="/about/" title="About">&nbsp;&nbsp; About &nbsp;&nbsp;</a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/" title="Posts">&nbsp;&nbsp; Posts &nbsp;&nbsp;</a><a class="menu-item" href="/research/" title="Research">&nbsp;&nbsp; Research &nbsp;&nbsp;</a><a class="menu-item" href="/software/" title="Software">&nbsp;&nbsp; Software &nbsp;&nbsp;&nbsp;</a><a class="menu-item active" href="/about/" title="About">&nbsp;&nbsp; About &nbsp;&nbsp;</a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -101,7 +101,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/posts/" title="Posts">&nbsp;&nbsp;Posts&nbsp;&nbsp;</a><a class="menu-item" href="/research/" title="Research">&nbsp;&nbsp;Research&nbsp;&nbsp;</a><a class="menu-item" href="/articles/" title="Articles">&nbsp;&nbsp;Articles&nbsp;&nbsp;&nbsp;</a><a class="menu-item" href="/about/" title="About">&nbsp;&nbsp;About&nbsp;&nbsp;</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/posts/" title="Posts">&nbsp;&nbsp;Posts&nbsp;&nbsp;</a><a class="menu-item" href="/research/" title="Research">&nbsp;&nbsp;Research&nbsp;&nbsp;</a><a class="menu-item" href="/software/" title="Software">&nbsp;&nbsp;Software&nbsp;&nbsp;&nbsp;</a><a class="menu-item" href="/about/" title="About">&nbsp;&nbsp;About&nbsp;&nbsp;</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw"></i>
             </a></div>
     </div>
