Added Polychromatic announce and citation

--- a/404.html
+++ b/404.html
@@ -8,8 +8,7 @@
         <title>404 Page not found - Alejandro R. Urzúa</title><meta name="Description" content="Personal webpage"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Personal webpage" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/404.html" />
-<meta property="og:image" content="/logo.png"/>
+<meta property="og:url" content="/404.html" /><meta property="og:image" content="/logo.png"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/logo.png"/>
